tests/compile_fail/bit/bad_bit_ceil_floating.cpp
#include "snap/bit/bit_ceil.hpp"

int main()
{
	double d = 1.5;
	auto r	 = snap::bit_ceil(d);
	(void)r;
}
